# OpenAgentNet

./: .env.example  .gitignore
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_constraints.py
backend/app/: main.py
backend/app/api/v1/: agents.py  common.py  discovery.py  marketplace.py  memory.py  messages.py  negotiations.py  trust.py  workflows.py
backend/app/core/: audit.py  config.py  crypto.py  database.py  dependencies.py  interfaces.py  rate_limit.py  security.py
backend/app/models/: __init__.py  agent.py  audit.py  marketplace.py  memory.py  negotiation.py  task.py  trust.py  workflow.py
backend/app/schemas/: agent.py  common.py  discovery.py  marketplace.py  memory.py  negotiation.py  task.py  trust.py  workflow.py
backend/app/services/discovery/: __init__.py  service.py
backend/app/services/marketplace/: __init__.py  service.py
backend/app/services/memory/: __init__.py  service.py
backend/app/services/messaging/: __init__.py  service.py
backend/app/services/negotiation/: __init__.py  service.py
backend/app/services/orchestration/: __init__.py  service.py
backend/app/services/registry/: __init__.py  service.py
backend/app/services/trust/: __init__.py  service.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_crypto.py  test_schemas.py  test_security.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DATA_MODEL.md  DESIGN.md  FEATURES.md  PLAN.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md
(+1 files in other folders)
